--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 
-  <title>Analog Sea</title>
+  <title>Analog Sea Webpage</title>
   <meta charset="utf-8" name="Description" content="AnalogSea -- here's is where you sign up!">
 </head>
 
